[package]
name = "speaker-analysis"
version = "0.1.0"
edition = "2021"

[features]
default = []
# speakrs is the sole on-device diarization provider (pure-Rust + a derived
# native execution backend): tokio drives `spawn_blocking`. The macOS audio
# decode path uses cidre, which is a non-optional macOS-target dependency (a
# strict superset for macOS shipping builds, which always enable speakrs) and
# is kept off Windows entirely — so the feature itself no longer pulls cidre.
speakrs = ["dep:speakrs", "dep:tokio"]

# speakrs DER benchmark harness binary (see
# scripts/diarization_bench/). Only built with the speakrs feature, so the heavy
# speakrs/OpenBLAS/CoreML build stays opt-in and default `cargo check`/`cargo test`
# (no features) stay clean. Drive it via `run_der.py --binary <path>`.
[[bin]]
name = "diarize_to_rttm_speakrs"
path = "src/bin/diarize_to_rttm_speakrs.rs"
required-features = ["speakrs"]

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["rt"], optional = true }
tempfile = "3"

# speakrs runs the one shipping Speaker Model Preset on a per-platform-derived
# Execution Backend (ADR 0004): the backend is orthogonal to identity — same
# `model_id`, same Voiceprint Space, recorded only in provenance (`executionMode`).
#
# macOS = CoreML backend. speakrs links `objc2-core-ml` (Apple Silicon), so it is
# a macOS-target dependency. Its BLAS is OpenBLAS, built from source and linked
# statically so the shipped binary carries no `/opt/homebrew/.../libopenblas.dylib`
# runtime dependency (the v0.1.9 launch crash). Building it needs a C/Fortran
# toolchain at build time (`brew install gcc`); the dynamic gfortran/quadmath
# runtime that openblas-src still emits is force-statically-linked in
# `apps/desktop/src-tauri/build.rs`. The `online` HuggingFace download path is
# dropped because we load via `from_dir` against the app model store. cidre powers
# the macOS audio decode path and is non-optional here (a strict superset for
# macOS shipping builds, which always enable speakrs).
#
# We select OpenBLAS through `default-linalg` (NOT the explicit `openblas-static`
# feature). `default-linalg` is arch-split inside speakrs: it resolves to
# `openblas-static` on Apple Silicon (non-x86_64) and `intel-mkl-static` on
# x86_64 — so macOS gets the exact same statically-linked OpenBLAS as before. This
# matters because both target dependency tables below request the SAME `speakrs`
# package, and Cargo unions their requested features onto that one package node
# (resolver v2's platform de-unification does NOT cover a shared optional dep's
# parent-requested features). `speakrs` aliases `ndarray-linalg` four ways
# (default/mkl/static/system, all `package = "ndarray-linalg"`); requesting two
# different linalg features (e.g. macOS `openblas-static` + Windows
# `default-linalg`) activates two aliases of the same crate and Cargo hard-errors
# ("depends on crate `ndarray-linalg` multiple times with different names").
# Using `default-linalg` on BOTH targets keeps it to one alias.
[target.'cfg(target_os = "macos")'.dependencies]
speakrs = { version = "0.4", default-features = false, features = ["coreml", "default-linalg"], optional = true }
cidre = { version = "0.15", default-features = false, features = ["async", "av", "blocks", "cat", "cf", "cm", "dispatch", "ns", "ut", "macos_15_0"] }

# Windows = CPU baseline + opt-in CUDA Execution Backend (ADR 0005, the #137
# follow-up to ADR 0004's CPU-first ship). speakrs's `default-linalg` resolves to
# `intel-mkl-static` on x86_64, so MKL is linked statically (no DLL, no Fortran
# toolchain — intel-mkl-src self-links). One platform-stable `model_id`; only the
# on-disk artifact differs (`.onnx`/`.npy` subset).
#
# `cuda` is what activates `ExecutionMode::Cuda`: it turns on `ort/cuda` so the
# ONNX Runtime CUDA execution provider can be registered. It is INERT without the
# rest of the #137 stack — it requires (a) Slice 1's `ort/load-dynamic` (the CUDA
# provider DLLs load dynamically, never static-linked), (b) the operator-provided
# CUDA-capable `onnxruntime_providers_cuda.dll` next to the exe, and (c) the
# in-app GPU Acceleration Pack (NVIDIA CUDA 12 + cuDNN 9 redist) present at
# runtime. With none of those staged the CPU path is unaffected: speakrs only
# attempts `ExecutionMode::Cuda` when the pack is present, and a CUDA-init failure
# falls back to CPU (see providers/speakrs.rs). So enabling `cuda` here never
# regresses the CPU-only Windows build — it only makes the GPU path *possible*.
#
# `default-linalg` (NOT the explicit `intel-mkl`/`cuda`-implied feature) must
# match the macOS entry above to avoid the `ndarray-linalg` multi-alias union
# error: dropping it (or swapping to a different linalg alias) re-triggers the
# "depends on crate `ndarray-linalg` multiple times with different names" hard
# error documented at length on the macOS entry. KEEP `default-linalg`.
#
# Audio decode goes through the shared `media-decode` Media Foundation seam
# (ADR 0024), mirroring audio-transcription. media-decode is NOT optional and NOT
# feature-gated: the `windows_audio_decode` module + its tests build under plain
# `cargo check`/`cargo test` on Windows even when the `speakrs` feature is off.
[target.'cfg(target_os = "windows")'.dependencies]
speakrs = { version = "0.4", default-features = false, features = ["default-linalg", "cuda"], optional = true }
media-decode = { path = "../media-decode" }
