[package]
name = "mnema"
version = "0.1.9"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "mnema"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mnema_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
cargo-clippy = []
ocr-budget-trace = []
privacy-refresh-trace = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-trait = "0.1"
base64 = "0.22"
bzip2 = "0.6"
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-os = "2"
fs2 = "0.4"
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
reqwest = { version = "0.12", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
thiserror = "2"
app-infra = { path = "../../../crates/app-infra" }
audio-transcription = { path = "../../../crates/audio-transcription", features = ["local-whisper", "parakeet-onnx"] }
speaker-analysis = { path = "../../../crates/speaker-analysis", features = ["sherpa-onnx"] }
capture-types = { path = "../../../crates/capture-types" }
capture-metadata = { path = "../../../crates/capture-metadata" }
capture-runtime = { path = "../../../crates/capture-runtime" }
capture-screen = { path = "../../../crates/capture-screen" }
capture-microphone = { path = "../../../crates/capture-microphone" }
capture-vad = { path = "../../../crates/capture-vad" }
capture-writers = { path = "../../../crates/capture-writers" }
tokio = { version = "1", features = ["io-util", "net", "process", "sync", "time"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
tempfile = "3"
tar = "0.4"
url = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[target.'cfg(windows)'.dependencies]
ocr = { path = "../../../crates/ocr", features = ["tesseract-embedded"] }
media-decode = { path = "../../../crates/media-decode" }
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_RemoteDesktop", "Win32_System_SystemInformation", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(not(windows))'.dependencies]
ocr = { path = "../../../crates/ocr", features = ["paddle-rs", "tesseract-embedded"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
core-graphics = "0.25"
core-foundation = "0.10"
core-foundation-sys = "0.8"
cidre = { version = "0.15", default-features = false, features = ["app", "async", "av", "blocks", "cf", "cg", "cm", "iio", "ns", "ut", "macos_15_0"] }
objc = "0.2"
