[package]
name = "mnema"
version = "0.1.13"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "mnema"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mnema_lib"
# `cdylib` is what the Tauri runtime loads; `rlib` is what the `mnema` bin (and
# tests) link against. The Tauri scaffold also lists `staticlib`, but that is
# only needed for the mobile (iOS/Android) targets — which this desktop-only app
# does not build (no gen/apple, gen/android, nor mobile keys in tauri.conf.json).
# It is REMOVED because on Windows the `staticlib` path bundles every transitive
# object (now including the statically-linked intel-mkl + ONNX Runtime pulled in
# by the speakrs CPU backend) into one COFF `.lib` archive whose 32-bit member
# offsets overflow, crashing rustc's bundled `ar_archive_writer` with an ICE
# (`TryFromIntError`) at link time. macOS never hit this (Mach-O ar is 64-bit),
# but it built the unused archive anyway; dropping it fixes Windows and speeds
# both. Restore `staticlib` here only if/when mobile targets are added.
crate-type = ["cdylib", "rlib"]

[features]
default = ["speaker-analysis-speakrs"]
cargo-clippy = []
ocr-budget-trace = []
privacy-refresh-trace = []
# Marker cfg the subprocess dispatcher gates the speakrs arm on (see
# `speaker_analysis_runtime`). The speakrs engine itself is enabled via the
# per-target `speaker-analysis` dependencies below — macOS (CoreML + OpenBLAS,
# Apple Silicon) and Windows (CPU via intel-mkl-static, x86_64) — and the dispatch
# arm is additionally gated on `any(target_os = "macos", target_os = "windows")`.
# Default-on so the shipped macOS and Windows builds compile the on-device
# diarization engine.
speaker-analysis-speakrs = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-trait = "0.1"
base64 = "0.22"
bzip2 = "0.6"
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-os = "2"
fs2 = "0.4"
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
# rustls alignment (ADR 0037): with fastembed/ort's `native-tls` gone, the model
# downloader's `reqwest` aligns to rustls — the workspace's other TLS users are
# rustls too (sqlx uses `runtime-tokio-rustls`). `default-features = false` drops
# the `default-tls` (native-tls) path; `charset` keeps `.text()` decoding and
# `http2` keeps HTTP/2 negotiation that the HTTPS endpoints (HuggingFace, the AI
# providers) use.
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "charset", "http2"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
thiserror = "2"
app-infra = { path = "../../../crates/app-infra" }
# Aliased so the Tauri-side `mod ai_runtime;` does not collide with the crate name.
ai-engine = { package = "ai-runtime", path = "../../../crates/ai-runtime" }
audio-transcription = { path = "../../../crates/audio-transcription", features = ["local-whisper", "parakeet-onnx"] }
# speakrs (the on-device diarization engine) runs on a per-platform Execution
# Backend, so its `speakrs` feature is enabled through the per-target
# dependencies below — macOS (CoreML + OpenBLAS) and Windows (CPU via
# intel-mkl-static) — never here. This base entry stays default-features = false
# so platforms without a target entry compile speaker-analysis with no on-device
# engine. OCR is selected per-target further down (paddle-rs does not build on
# Windows), so there is no generic `ocr` entry here.
speaker-analysis = { path = "../../../crates/speaker-analysis", default-features = false }
# Semantic Search now runs on candle (ADR 0037). The base dep has no default
# features (candle-CPU); the macOS target dep below adds `metal` for the Apple GPU
# (Cargo unions features across the base + target entries). The candle runtime
# tries Metal then falls back to CPU at runtime regardless.
semantic-search = { path = "../../../crates/semantic-search" }
capture-types = { path = "../../../crates/capture-types" }
capture-metadata = { path = "../../../crates/capture-metadata" }
capture-runtime = { path = "../../../crates/capture-runtime" }
capture-screen = { path = "../../../crates/capture-screen" }
capture-microphone = { path = "../../../crates/capture-microphone" }
capture-vad = { path = "../../../crates/capture-vad" }
capture-writers = { path = "../../../crates/capture-writers" }
tokio = { version = "1", features = ["io-util", "net", "process", "sync", "time"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
tempfile = "3"
tar = "0.4"
# The GPU Acceleration Pack downloader (#137, ADR 0005) extracts a handful of
# NVIDIA CUDA/cuDNN redistributable DLLs out of NVIDIA's official `.zip` archives.
# `default-features = false` + `deflate` mirrors the audio-transcription crate's
# entry exactly (NVIDIA's redist zips are DEFLATE-compressed), keeping a single
# `zip` build in the workspace and dropping the bzip2/zstd/aes back-ends we do not
# use here.
zip = { version = "2", default-features = false, features = ["deflate"] }
url = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
htmd = "0.5.4"
# Charset-aware decode of the fetched body (already in the tree via reqwest's
# `charset` feature). `bytes_stream()` yields raw bytes, so we decode by the
# declared Content-Type charset rather than assuming UTF-8.
encoding_rs = "0.8"
rmcp = { version = "2.1.0", default-features = false, features = ["client", "macros", "auth", "transport-child-process", "transport-streamable-http-client-reqwest", "transport-io", "transport-async-rw"] }
# rmcp 2.1.0's OAuth `AuthClient<C>` is only a `StreamableHttpClient` when `C` is
# rmcp's OWN reqwest — which is 0.13, a semver bump from the workspace's 0.12 (a
# different, incompatible `reqwest::Client` type). rmcp neither re-exports reqwest
# nor exposes its default client builder, so the OAuth transport must name the
# 0.13 client itself. Aliased to `reqwest13` so it coexists with the 0.12 dep
# above; 0.13 defaults to rustls (`default-tls = ["rustls"]`), so `rustls` keeps
# us native-tls-free (ADR 0037), matching the workspace's rustls alignment.
reqwest13 = { package = "reqwest", version = "0.13", default-features = false, features = ["rustls"] }
# Same semver line as rmcp's internal process-wrap dep (versions unify in Cargo.lock);
# used to spawn stdio MCP servers as a process-group leader (Unix) / into a Job
# Object (Windows) so drop-kill takes the whole tree (launcher + grandchildren),
# not just the launcher. `kill-on-drop` gates the job's KILL_ON_JOB_CLOSE flag —
# without it a closed job handle leaves the tree running.
process-wrap = { version = "9.0", features = ["tokio1", "process-group", "job-object", "kill-on-drop"] }

[target.'cfg(windows)'.dependencies]
# Enable the speakrs on-device diarization engine on Windows (CPU backend via
# intel-mkl-static, x86_64; ORT statically linked). Cargo unions this `speakrs`
# feature with the base (default-features = false) entry above, mirroring the
# macOS target entry, so only macOS + Windows pull speakrs.
speaker-analysis = { path = "../../../crates/speaker-analysis", features = ["speakrs"] }
# The Windows app loads ONNX Runtime dynamically (`ort/load-dynamic`, #137):
# tell the Silero VAD adapter so it requires ORT_DYLIB_PATH and falls back
# fast instead of letting `ort` LoadLibrary a system `onnxruntime.dll`
# (version-unchecked; observed to deadlock the loader when a Windows ML copy
# exists). Cargo unions this with the base entry above on Windows only —
# standalone `capture-vad` builds keep their statically linked ORT untouched.
capture-vad = { path = "../../../crates/capture-vad", features = ["dynamic-ort"] }
ocr = { path = "../../../crates/ocr", features = ["tesseract-embedded"] }
media-decode = { path = "../../../crates/media-decode" }
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Security", "Win32_Security_Authorization", "Win32_Storage_FileSystem", "Win32_System_LibraryLoader", "Win32_System_RemoteDesktop", "Win32_System_SystemInformation", "Win32_System_Threading", "Win32_UI_Accessibility", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
# First full COM-capable `windows` crate dependency (ADR 0044 consequence),
# alongside `windows-sys` above: the browser-URL UI Automation reader
# (`native_capture_browser_url_uia.rs`) needs the COM/UIA object model
# (`IUIAutomation`, ValuePattern, tree walker), which `windows-sys` (raw FFI,
# no interfaces) cannot express. Major kept at 0.61 to match `windows-sys`.
# NOTE: in `windows` 0.61 `BOOL` lives in `windows::core`.
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_Accessibility", "Win32_System_Com", "Win32_System_Ole", "Win32_System_Variant"] }

[target.'cfg(not(windows))'.dependencies]
ocr = { path = "../../../crates/ocr", features = ["paddle-rs", "tesseract-embedded"] }

[target.'cfg(target_os = "macos")'.dependencies]
# Enable the speakrs on-device diarization engine on macOS only (CoreML +
# OpenBLAS, Apple Silicon). Cargo unions this `speakrs` feature with the base
# (default-features = false) entry above, so non-macOS builds never pull speakrs.
speaker-analysis = { path = "../../../crates/speaker-analysis", features = ["speakrs"] }
# Already in the tree via cocoa; needed directly for the non-nil completion
# handler WKWebsiteDataStore requires (webview_cache.rs).
block = "0.1"
cocoa = "0.26"
core-graphics = "0.25"
core-foundation = "0.10"
core-foundation-sys = "0.8"
cidre = { version = "0.15", default-features = false, features = ["app", "async", "av", "blocks", "cf", "cg", "cm", "iio", "ns", "ut", "macos_15_0"] }
objc = "0.2"
# Enable candle's `metal` feature on macOS so Semantic Search embeds on the Apple
# GPU (ADR 0037). Cargo unions this with the base (no-default-features) entry, so
# the macOS build gets Metal while other platforms stay candle-CPU. The path must
# match the base entry above exactly.
semantic-search = { path = "../../../crates/semantic-search", features = ["metal"] }
