[package]
name = "mnema"
version = "0.1.17"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "mnema"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mnema_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["speaker-analysis-speakrs"]
cargo-clippy = []
ocr-budget-trace = []
privacy-refresh-trace = []
# Forwarding feature: turn the `speaker-analysis` speakrs engine on AND expose a
# desktop-crate cfg the subprocess dispatcher gates the speakrs arm on (see
# `speaker_analysis_runtime::analyze_request_for_provider`). Default-on, so the
# shipped build compiles the on-device diarization engine.
speaker-analysis-speakrs = ["speaker-analysis/speakrs"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-trait = "0.1"
base64 = "0.22"
bzip2 = "0.6"
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
fs2 = "0.4"
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
# rustls alignment (ADR 0037): with fastembed/ort's `native-tls` gone, the model
# downloader's `reqwest` aligns to rustls — the workspace's other TLS users are
# rustls too (sqlx uses `runtime-tokio-rustls`). `default-features = false` drops
# the `default-tls` (native-tls) path; `charset` keeps `.text()` decoding and
# `http2` keeps HTTP/2 negotiation that the HTTPS endpoints (HuggingFace, the AI
# providers) use.
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "charset", "http2"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
thiserror = "2"
app-infra = { path = "../../../crates/app-infra" }
# licensegate client: offline verification (Verifier/evaluate) + the /v1 API client.
licensegate = "0.2"
# Aliased so the Tauri-side `mod ai_runtime;` does not collide with the crate name.
ai-engine = { package = "ai-runtime", path = "../../../crates/ai-runtime" }
audio-transcription = { path = "../../../crates/audio-transcription", features = ["local-whisper", "parakeet-onnx"] }
# The speakrs engine feature is driven by this crate's forwarding feature
# (default-on) so the subprocess dispatcher can gate the speakrs arm on a
# matching desktop-crate cfg. See `[features]` above.
speaker-analysis = { path = "../../../crates/speaker-analysis", default-features = false }
ocr = { path = "../../../crates/ocr", features = ["paddle-rs", "tesseract-embedded"] }
# Semantic Search now runs on candle (ADR 0037). The base dep has no default
# features (candle-CPU); the macOS target dep below adds `metal` for the Apple GPU
# (Cargo unions features across the base + target entries). The candle runtime
# tries Metal then falls back to CPU at runtime regardless.
semantic-search = { path = "../../../crates/semantic-search" }
capture-types = { path = "../../../crates/capture-types" }
capture-metadata = { path = "../../../crates/capture-metadata" }
capture-runtime = { path = "../../../crates/capture-runtime" }
capture-screen = { path = "../../../crates/capture-screen" }
capture-microphone = { path = "../../../crates/capture-microphone" }
capture-system-audio = { path = "../../../crates/capture-system-audio" }
capture-vad = { path = "../../../crates/capture-vad" }
capture-writers = { path = "../../../crates/capture-writers" }
tokio = { version = "1", features = ["io-util", "net", "process", "sync", "time"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
tempfile = "3"
tar = "0.4"
url = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
htmd = "0.5.4"
# Charset-aware decode of the fetched body (already in the tree via reqwest's
# `charset` feature). `bytes_stream()` yields raw bytes, so we decode by the
# declared Content-Type charset rather than assuming UTF-8.
encoding_rs = "0.8"
rmcp = { version = "2.1.0", default-features = false, features = ["client", "macros", "auth", "transport-child-process", "transport-streamable-http-client-reqwest", "transport-io", "transport-async-rw"] }
# rmcp 2.1.0's OAuth `AuthClient<C>` is only a `StreamableHttpClient` when `C` is
# rmcp's OWN reqwest — which is 0.13, a semver bump from the workspace's 0.12 (a
# different, incompatible `reqwest::Client` type). rmcp neither re-exports reqwest
# nor exposes its default client builder, so the OAuth transport must name the
# 0.13 client itself. Aliased to `reqwest13` so it coexists with the 0.12 dep
# above; 0.13 defaults to rustls (`default-tls = ["rustls"]`), so `rustls` keeps
# us native-tls-free (ADR 0037), matching the workspace's rustls alignment.
reqwest13 = { package = "reqwest", version = "0.13", default-features = false, features = ["rustls"] }
# Same semver line as rmcp's internal process-wrap dep (versions unify in Cargo.lock);
# used to spawn stdio MCP servers as a process-group leader so drop-kill takes the
# whole group (launcher + grandchildren), not just the launcher.
process-wrap = { version = "9.0", features = ["tokio1", "process-group"] }

[target.'cfg(target_os = "macos")'.dependencies]
# Already in the tree via cocoa; needed directly for the non-nil completion
# handler WKWebsiteDataStore requires (webview_cache.rs).
block = "0.1"
cocoa = "0.26"
core-graphics = "0.25"
core-foundation = "0.10"
core-foundation-sys = "0.8"
cidre = { version = "0.15", default-features = false, features = ["app", "async", "av", "blocks", "cf", "cg", "cm", "iio", "ns", "ut", "macos_15_0"] }
objc = "0.2"
# Enable candle's `metal` feature on macOS so Semantic Search embeds on the Apple
# GPU (ADR 0037). Cargo unions this with the base (no-default-features) entry, so
# the macOS build gets Metal while other platforms stay candle-CPU. The path must
# match the base entry above exactly.
semantic-search = { path = "../../../crates/semantic-search", features = ["metal"] }
